# lifelog

./: README.md  add.html  justfile  package-lock.json  package.json  stats.html
src/: AddEntry.tsx  App.css  App.tsx  Statistics.tsx  mainAdd.tsx  mainStats.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backup.rs  calendar.rs  calendar_entry.rs  command_result.rs  lib.rs  main.rs  statistics.rs
src/components/: ActualTimer.tsx  AddEntryButton.tsx  CalendarEntry.ts  CalendarViewSelector.tsx  Description.tsx  EditEntryButton.tsx  Entry.tsx  LeftPanel.tsx  PauseButton.tsx  RefreshButton.tsx  RemoveEntryButton.tsx  ResumeButton.tsx  RightPanel.tsx  SaveStatsButton.tsx  ShowStatsButton.tsx  StatsEntry.tsx  ThemeToggler.tsx  Timer.tsx  Today.tsx
src/utils/: GlobalState.ts
